I updated the node packages that were showing signs of vulnerabilities, and tested to make sure the updated packages did not bug the application. I updated the 'New Row' button so that it no longer removes any unsaved changes that were done to the displayed list. I updated the profile <details> tag and it's child components so now it will no longer have user names overflow outside it's borders, and the logout anchor will remain the same width as the <details> tag. I also added a set height to the header so that I could remove the the header title from the document flow. This allowed me to perfectly center it on the header and not have it's position shift based on the user's name length (displayed on the profile <details> tag).

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,13 +38,17 @@ footer {
 header {
   box-shadow: 0px 0px 10px 2px darkgreen;
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
   background-color: var(--basic-green);
+  height: 86px;
 }
 
 .headerTitle {
-  margin-left: 125px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 
 .thing {
@@ -117,7 +121,7 @@ details summary::-webkit-details-marker {
 }
 
 .profileDropdown {
-  width: 100px;
+  width: fit-content;
   margin: 0 0 0 5px;
 }
 
@@ -142,7 +146,8 @@ details summary::-webkit-details-marker {
   position: absolute;
   padding: 5px 20px 5px 10px;
   background-color: var(--bright-green);
-  width: 70px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .logoutBtn:hover {
